<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">App Store</string>

    <string name="pkg_status_disabled">Disabled</string>
    <string name="pkg_status_update_available">Update available (%1$s)</string>
    <string name="pkg_status_installed">Installed</string>
    <string name="pkg_status_downloading">Downloading: %1$d%% of %2$s</string>
    <string name="pkg_status_downloading_update">Downloading update: %1$d%% of %2$s</string>
    <string name="pkg_status_pending_download">Pending download</string>
    <string name="pkg_status_pending_install">Pending</string>
    <string name="pkg_status_installing">Installing</string>
    <string name="pkg_status_unpacking">Unpacking</string>
    <string name="pkg_status_waiting_for_confirmation">Waiting for confirmation</string>
    <string name="pkg_status_shared_library">Shared library, %1$s</string>

    <string name="btn_install">Install</string>
    <string name="btn_open">Open</string>
    <string name="btn_update">Update</string>
    <string name="btn_enable_package">Enable</string>

    <string name="menu_item_all_packages">All packages</string>
    <string name="menu_item_uninstall">Uninstall</string>
    <string name="menu_item_uninstall_updates">Uninstall updates</string>

    <string name="pkg_installed_version">Installed version</string>
    <string name="pkg_available_version">Available version</string>

    <string name="pkg_description">Description</string>
    <string name="pkg_release_notes">Release notes</string>
    <string name="pkg_dependencies">Dependencies</string>

    <string name="pkg_source_grapheneos">GrapheneOS</string>
    <string name="pkg_source_grapheneos_build">GrapheneOS build</string>
    <string name="pkg_source_lineageos">LineageOS</string>
    <string name="pkg_source_mirror">Mirror</string>
    <string name="pkg_source_google">Google (mirror)</string>

    <string name="settings">Settings</string>
    <string name="open_settings">Open settings</string>

    <string name="updates_screen_title">Updates</string>

    <plurals name="number_of_updates">
        <item quantity="one">%d update</item>
        <item quantity="other">%d updates</item>
    </plurals>

    <string name="no_available_updates">No available updates</string>

    <string name="cancel">Cancel</string>
    <string name="cancelling_download">Cancelling download</string>

    <string name="dismiss">Dismiss</string>

    <plurals name="cancel_plural">
        <item quantity="one">Cancel</item>
        <item quantity="other">Cancel all</item>
    </plurals>

    <plurals name="start_update_button">
        <item quantity="one">Update</item>
        <item quantity="other">Update all</item>
    </plurals>

    <string name="installation_failed">Installation failed</string>

    <string name="search">Search</string>

    <string name="release_channel">Release channel</string>
    <string name="release_channel_alpha">Alpha</string>
    <string name="release_channel_beta">Beta</string>
    <string name="release_channel_stable">Stable</string>

    <string name="notif_download_in_progress">Downloading files, %1$s left</string>

    <string name="notif_title_pending_user_action">Action required</string>
    <string name="notif_text_pending_user_action_install">Confirm installation of %1$s, version %2$s</string>
    <string name="notif_text_pending_user_action_update">Confirm update of %1$s to version %2$s</string>

    <string name="notif_group_auto_update">Auto-update</string>
    <string name="notif_auto_update_all_up_to_date">Apps are up-to-date</string>
    <string name="notif_ch_auto_update_updated_packages">Updated apps</string>
    <string name="notif_auto_update_updated_package_title">Updated app</string>
    <string name="notif_auto_update_updated_package_text">Updated %1$s to version %2$s</string>
    <string name="notif_ch_auto_update_confirmation_required">Confirmation required</string>
    <string name="notif_ch_auto_update_failed">Auto-update failed</string>
    <string name="notif_ch_background_update_check_failed">Background update check failed</string>
    <string name="notif_ch_updates_available">Updates available</string>

    <string name="notif_pkg_update_available_text">%1$s, version %2$s</string>
    <plurals name="notif_pkg_updates_available_title">
        <item quantity="one">Update available, %1$s</item>
        <item quantity="other">Updates available, %1$s</item>
    </plurals>

    <string name="notif_ch_downloading_app">App download</string>
    <string name="notif_missing_dependency">Missing dependency</string>
    <string name="notif_installation_failed">Installation failed</string>
    <string name="notif_download_failed">Download failed</string>

    <string name="unable_to_fetch_app_list">Unable to fetch the list of apps</string>
    <string name="app_update_check_failed">App update check failed</string>

    <string name="main_screen_unable_to_fetch_app_list_initial">Unable to fetch the list of apps, swipe down to try again.</string>

    <string name="uninstall_failed">Uninstall failed</string>

    <string name="msg_unable_to_download_pkg">Unable to download %1$s</string>
    <string name="msg_unable_to_install_pkg">Unable to install %1$s</string>
    <string name="msg_unable_to_uninstall_pkg">Unable to uninstall %1$s</string>

    <string name="error_details_prefix">Details: \n</string>
    <string name="snackbar_action_details">Details</string>

    <string name="err_title_missing_dependency">Missing dependency</string>
    <string name="err_msg_dependency_resolution_dep_missing_in_repo">%1$s depends on %2$s, which is missing from the list of available packages.</string>
    <string name="err_msg_dependency_resolution_dep_disabled">%1$s depends on %2$s, which is disabled.</string>
    <string name="err_msg_dependency_resolution_dep_not_installed">%1$s depends on %2$s, which is not installed.</string>

    <string name="download_error_user_restriction">the policy on this device prevents app installation</string>
    <plurals name="download_error_packages_busy">
        <item quantity="one">this package is being installed in another user</item>
        <item quantity="other">one or more of these packages are being installed in another user</item>
    </plurals>

    <string name="network_error_unable_to_connect_to_server">Unable to connect to the server</string>
    <string name="network_error_connection_timed_out">Connection to the server has timed out</string>
    <string name="network_error_unknown_host_name">Unable to resolve the server name</string>

    <string name="installer_error_conflict">package conflicts with another package that is already installed on this device</string>
    <string name="installer_error_version_downgrade">newer version of the package is already installed on this device</string>
    <string name="installer_error_insufficient_storage">not enough storage space</string>

    <string name="err_msg_uninstall_restricted">not allowed to uninstall this package</string>

    <string name="err_title_pkg_is_installing">Package is currently installing</string>
    <string name="err_title_dep_is_installing">Dependency is currently installing</string>
    <string name="err_msg_pkg_is_installing">%1$s is currently installing. Try again after installation completes.</string>

    <string name="btn_copy">Copy</string>

    <string name="notification_permission_dialog_title">Missing notification permission</string>
    <string name="notification_permission_dialog_message">Allow the notification permission to get notified of app updates, download and installation status.</string>

    <string name="dont_show_again">Don\'t show again</string>
</resources>
